@@ -24,6 +24,10 @@ What's new in Sudo 1.8.13
    use passwd (or shadow) file authentication on systems where the
    crypt() function returns NULL for invalid salts.
 
+ * On AIX, sudo now uses the value of the auth_type setting in
+   /etc/security/login.cfg to determine whether to use LAM or PAM
+   for user authentication.
+
 What's new in Sudo 1.8.12
 
  * The embedded copy of zlib has been upgraded to version 1.2.8 and
